--- a/haskell-word2vec.cabal
+++ b/haskell-word2vec.cabal
@@ -18,6 +18,7 @@ library
   build-depends:       base >= 4.8 && < 5
                      , containers >= 0.5.8.1
                      , text >= 1.2
+                     , logger >= 0.1.0.2
   default-language:    Haskell2010
 
 executable haskell-word2vec-exe
@@ -33,6 +34,7 @@ executable haskell-word2vec-exe
                      , hakyll >= 4.8.3.1
                      , aeson-pretty < 0.8
                      , text
+                     , logger >= 0.1.0.2
   default-language:    Haskell2010
 
 test-suite haskell-word2vec-test
