--- a/stack.yaml
+++ b/stack.yaml
@@ -1,4 +1,6 @@
 flags:
+  generic-deriving:
+    base-4-9: false
   semigroups:
     bytestring-builder: false
   pandoc:
@@ -9,20 +11,28 @@ extra-package-dbs: []
 packages:
 - '.'
 extra-deps:
+- Cabal-1.24.0.0
 - HTTP-4000.3.3
+- HUnit-1.5.0.0
 - JuicyPixels-3.2.8
 - MonadCatchIO-transformers-0.3.1.3
 - SHA-1.6.4.2
 - StateVar-1.1.0.4
-- Win32-notify-0.3.0.1
+- adjunctions-4.3
 - aeson-0.11.2.1
 - aeson-pretty-0.7.2
+- ansi-terminal-0.6.2.3
+- ansi-wl-pprint-0.6.7.3
 - asn1-encoding-0.9.4
 - asn1-parse-0.9.4
 - asn1-types-0.3.2
+- async-2.1.0
+- atomic-primops-0.8.0.4
 - attoparsec-0.13.1.0
 - attoparsec-enumerator-0.3.4
+- base-orphans-0.5.4
 - base64-bytestring-1.0.0.1
+- bifunctors-5.4.1
 - binary-0.7.6.1
 - blaze-builder-0.4.0.2
 - blaze-builder-enumerator-0.2.1.0
@@ -30,10 +40,13 @@ extra-deps:
 - blaze-markup-0.7.1.0
 - byteable-0.1.1
 - bytestring-builder-0.10.8.1.0
+- bytestring-mmap-0.2.2
+- call-stack-0.1.0
 - case-insensitive-1.2.0.7
 - cereal-0.5.3.0
 - cmark-0.5.3.1
 - cmdargs-0.10.14
+- comonad-5
 - conduit-1.2.8
 - conduit-extra-1.1.13.3
 - connection-0.2.6
@@ -49,6 +62,7 @@ extra-deps:
 - data-default-instances-dlist-0.0.1
 - data-default-instances-old-locale-0.0.1
 - digest-0.0.1.2
+- distributive-0.5.0.2
 - dlist-0.8.0.2
 - enclosed-exceptions-1.0.2
 - enumerator-0.4.20
@@ -56,11 +70,14 @@ extra-deps:
 - extensible-exceptions-0.1.1.4
 - fail-4.9.0.0
 - filemanip-0.3.6.3
+- free-4.12.4
 - fsnotify-0.2.1
+- generic-deriving-1.11.1
 - haddock-library-1.4.2
 - hakyll-4.8.3.1
 - hashable-1.2.4.0
 - highlighting-kate-0.6.3
+- hinotify-0.3.8.1
 - hourglass-0.2.10
 - hs-bibutils-5.5
 - hslua-0.4.1
@@ -68,7 +85,10 @@ extra-deps:
 - http-client-tls-0.2.4.1
 - http-conduit-2.1.11
 - http-types-0.9.1
+- kan-extensions-5.0.1
+- lens-4.15.1
 - lifted-base-0.2.3.8
+- logger-0.1.0.2
 - lrucache-1.2.0.0
 - memory-0.13
 - mime-types-0.1.0.7
@@ -76,13 +96,21 @@ extra-deps:
 - monad-control-1.0.1.0
 - monads-tf-0.1.0.3
 - mtl-2.2.1
+- network-2.6.3.1
 - network-uri-2.6.1.0
+- old-locale-1.0.0.7
+- old-time-1.1.0.3
 - pandoc-1.17.2
 - pandoc-citeproc-0.9.1.1
 - pandoc-types-1.16.1.1
+- parallel-3.2.1.0
 - parsec-3.1.11
 - pem-0.2.2
+- prelude-extras-0.4.0.3
 - primitive-0.6.1.0
+- profunctors-5.2
+- random-1.1
+- reflection-2.1.2
 - regex-base-0.93.2
 - regex-pcre-builtin-0.94.4.8.8.35
 - regex-posix-0.95.2
@@ -90,12 +118,16 @@ extra-deps:
 - resourcet-1.1.8
 - rfc5051-0.1.0.3
 - scientific-0.3.4.9
+- semigroupoids-5.1
 - semigroups-0.18.2
 - setenv-0.1.1.3
 - snap-core-0.9.8.0
 - snap-server-0.9.5.1
 - socks-0.5.5
+- split-0.2.3.1
+- stm-2.4.4.1
 - streaming-commons-0.1.16
+- syb-0.6
 - system-filepath-0.4.13.4
 - tagged-0.8.5
 - tagsoup-0.13.10
@@ -107,6 +139,7 @@ extra-deps:
 - transformers-0.4.3.0
 - transformers-base-0.4.4
 - transformers-compat-0.5.1.4
+- unagi-chan-0.4.0.0
 - unix-compat-0.4.2.0
 - unordered-containers-0.2.7.1
 - utf8-string-1.0.1.1
@@ -122,6 +155,7 @@ extra-deps:
 - yaml-0.8.18.7
 - zip-archive-0.3.0.5
 - zip-conduit-0.2.2.2
+- zlib-0.6.1.1
 - zlib-bindings-0.1.1.5
 - zlib-enum-0.2.3.1
 resolver: ghc-7.10.3
